@startuml
entity edc_asset {
  * id: string <<PK>>
  --
}

entity edc_asset_dataaddress {
  * asset_id_fk: string <<PK>>
  * properties: string <<json>>
  --
}

entity edc_asset_property {
  * asset_id_fk: string <<PK>>
  * property_name: string
  * property_value: string
  * property_type: string
  --
}

edc_asset ||--|| edc_asset_dataaddress
edc_asset ||--o{ edc_asset_property
@enduml